@@ -1,4 +1,5 @@
 HEAD
+	+ Remove z-push support in favor of sogo-activesync
 	+ Disable SOGo login for user accounts without mail enabled
 	+ Enable password change from the SOGo webmail
 	+ Configure automatic refresh of SOGo webmail to 5 min
